[package]
name = "poc-vector-store-recall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
json = "0.12.4"
once_cell = "1.18.0"
reedline = "0.25.0"
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
ureq = { version = "2.8.0", features = ["json"] }
